# ofcp-engine

./: .gitignore  AGENTS.md  PLANS.md  README.md  ROOT_ACTION_RISK_STATUS.md  SOLVER_PLAN.md  pyproject.toml
docs/: rules.md  solver_improvements.md
ofc/: __init__.py
ofc_analysis/: __init__.py
ofc_solver/: __init__.py
scenarios/: initial_deal.json
scenarios/benchmark_suites/: solver_late_final_large.json
scenarios/benchmarks/: solver_diagnostics.json  solver_final_draw_fantasyland_targeted.json
scenarios/regression/: draw_root.json  fantasyland_continuation_ev.json  immediate_scoring.json  opponent_hidden_discards.json
src/ofc/: __init__.py  actions.py  board.py  cards.py  config.py  deck.py  engine.py  evaluator.py  fantasyland.py  scoring.py  state.py  transitions.py
src/ofc_analysis/: __init__.py  cli.py  (+7 more)
tests/: __init__.py  helpers.py  test_actions.py  test_analysis_action_codec.py  test_analysis_cli.py  test_analysis_observation.py  test_analysis_play.py  test_analysis_render.py  test_analysis_scenario.py  test_benchmark_generation.py  test_board_legality.py  test_cards.py  test_deck.py  test_evaluator_five_card.py  test_evaluator_top_row.py  test_fantasyland.py  test_golden_hands.py  test_scoring.py  test_solver_benchmark.py  test_solver_benchmark_corpus.py  test_solver_early_search.py  test_solver_late_search.py  test_solver_monte_carlo.py  test_solver_regression_scenarios.py  test_solver_rollout.py  test_solver_rollout_policy.py  test_solver_root_action_risk.py  test_solver_sampler.py  test_transitions_fantasyland.py  test_transitions_normal.py
(+415 files in other folders)
